--- a/css/main.scss
+++ b/css/main.scss
@@ -12,7 +12,8 @@ body,
 html {
   box-sizing: border-box;
 
-  font-size: 100%;
+  font-family: "open-sans-medium";
+  font-size: 1rem;
   -webkit-font-smoothing: antialiased;
 }
 
