--- a/css/main.css
+++ b/css/main.css
@@ -4,8 +4,8 @@
   top: 0;
   right: 0;
   left: 0;
-  background-color: #fff;
-  border-bottom: 1px solid black;
+  background-color: #ffffff;
+  border-bottom: 1px solid #000000;
   text-transform: uppercase;
 }
 
@@ -21,7 +21,7 @@ header {
 }
 
 label.open-left-sidebar-button {
-  background-color: white;
+  background-color: #ffffff;
 }
 
 ul,
@@ -36,7 +36,7 @@ a.logo {
 }
 
 a {
-  color: black;
+  color: #000000;
   text-decoration: none;
 }
 
@@ -104,21 +104,21 @@ a {
     z-index: 10;
     width: 70%;
     height: 100%;
-    background-color: white;
-    border-right: 1px solid black;
+    background-color: #ffffff;
+    border-right: 1px solid #000000;
     transition: 0.3s ease-out;
   }
   .primary-menu .primary-menu-header {
-    color: black;
-    background-color: white;
+    color: #000000;
+    background-color: #ffffff;
   }
   .primary-menu .primary-menu-header:hover {
-    color: white;
-    background-color: black;
+    color: #ffffff;
+    background-color: #000000;
   }
   .primary-menu .primary-menu-header:hover svg {
-    fill: white;
-    border-right: 1 px solid black;
+    fill: #ffffff;
+    border-right: 1 px solid #000000;
   }
   .primary-menu label {
     justify-content: flex-end;
@@ -143,12 +143,14 @@ a {
   .primary-menu #left-sidebar-search {
     display: block;
     width: 100%;
-    padding: 1em 1.2em 1em 3.2em;
-    background-color: white;
+    padding: 1.1em 1.2em 1em 3.3em;
+    color: #757575;
+    background-color: #ffffff;
     font-family: "open-sans-medium";
     font-size: 0.875rem;
     text-transform: uppercase;
     border-bottom: 1px solid black;
+    border-radius: 0px;
   }
   .primary-menu #left-sidebar-search:focus {
     outline: none !important;
@@ -212,7 +214,7 @@ a {
     display: flex;
   }
   .close-left-sidebar-button {
-    border-bottom: 1px solid black;
+    border-bottom: 1px solid #000000;
   }
   #left-sidebar-active:checked ~ .primary-menu {
     left: 0;
@@ -269,16 +271,6 @@ img {
   height: auto;
 }
 
-@font-face {
-  font-family: "open-sans-light";
-  font-style: normal;
-  src: url(../../font/OpenSans-Light.ttf) format("truetype");
-}
-@font-face {
-  font-family: "open-sans-light-italic";
-  font-style: italic;
-  src: url(../../font/OpenSans-LightItalic.ttf) format("truetype");
-}
 @font-face {
   font-family: "open-sans-medium";
   font-style: italic;
