--- a/css/scss/_variables.scss
+++ b/css/scss/_variables.scss
@@ -1,5 +1,3 @@
-$main-color: #047aff;
+$main-color: #000000;
 $secondary-color: #ffffff;
-
-$text-color-1: #000000;
-$text-color-2: #cececf;
+$search-bar-color: #757575;
