--- a/css/scss/_variables.scss
+++ b/css/scss/_variables.scss
@@ -1,3 +1,7 @@
 $main-color: #000000;
 $secondary-color: #ffffff;
+
+$border-color-01: #000000;
+$border-color-02: #ffffff;
+
 $search-bar-color: #757575;
