--- a/css/scss/_header.scss
+++ b/css/scss/_header.scss
@@ -5,19 +5,19 @@
   right: 0;
   left: 0;
   background-color: $secondary-color;
-  border-bottom: 1px solid $main-color;
+  border-bottom: 1px solid $border-color-01;
   text-transform: uppercase;
 }
 
 header {
-  height: 3.3em;
-  max-width: 140em;
+  min-height: 3.5em;
+  max-width: 160em;
   display: flex;
   padding: 0;
   margin: auto;
   align-items: center;
   justify-content: space-between;
-  font-size: 0.875rem;
+  font-size: 0.8rem;
 }
 
 label.open-left-sidebar-button {
@@ -42,18 +42,20 @@ a {
 
 .primary-menu {
   position: absolute;
-  margin-left: 0.7em;
-  overflow: scroll;
+  margin-left: 1em;
+  overflow: hidden;
+  //overflow: auto;
 
   a {
     padding: 0.5em 0.5em;
     margin-right: 0.5em;
 
-    border: 1px solid $secondary-color;
+    border: 1px solid $border-color-02;
     border-radius: 4px;
 
     &:hover {
-      border: 1px solid $main-color;
+      cursor: pointer;
+      border: 1px solid $border-color-01;
       border-radius: 4px;
     }
   }
@@ -67,16 +69,17 @@ a {
 }
 
 .secondary-menu {
-  margin-right: 0.7em;
+  margin-right: 1em;
 
   a {
     padding: 0.25em 0.25em;
     margin-left: 0.5em;
 
-    border: 1px solid $secondary-color;
+    border: 1px solid $border-color-02;
     border-radius: 4px;
 
     a:hover {
+      cursor: pointer;
       border: 0px;
     }
   }
@@ -94,8 +97,8 @@ a {
 .site-logo {
   position: absolute;
   left: 50%;
-  top: 25%;
-  height: 1.4rem;
+  top: 30%;
+  height: 1.2rem;
   transform: translateX(-50%);
 }
 
@@ -105,6 +108,7 @@ a {
   display: none;
 }
 
+//825px
 @media only screen and (max-width: 51.5625em) {
   .nav-icon.menu-search {
     display: inline-block;
@@ -114,6 +118,7 @@ a {
   }
 
   .primary-menu {
+    overflow-y: auto;
     margin-left: 0;
     position: fixed;
     top: 0;
@@ -123,7 +128,7 @@ a {
     height: 100%;
 
     background-color: $secondary-color;
-    border-right: 1px solid $main-color;
+    border-right: 1px solid $border-color-01;
     //box-shadow: +5px 0px 5px rgba(0, 0, 0, 0.2);
     transition: 0.3s ease-out;
 
@@ -132,12 +137,13 @@ a {
       background-color: $secondary-color;
 
       &:hover {
+        cursor: pointer;
         color: $secondary-color;
         background-color: $main-color;
 
         svg {
           fill: $secondary-color;
-          border-right: 1 px solid $main-color;
+          border-right: 1 px solid $border-color-01;
         }
       }
     }
@@ -195,17 +201,18 @@ a {
 
       border-top: 0px;
       border-right: 0px;
-      border-bottom: 1px solid $main-color;
+      border-bottom: 1px solid $border-color-01;
       border-left: 0px;
       border-radius: 0px;
 
       &:hover {
+        cursor: pointer;
         color: $secondary-color;
         background-color: $main-color;
 
         border-top: 0px;
         border-right: 0px;
-        border-bottom: 1px solid $main-color;
+        border-bottom: 1px solid $border-color-01;
         border-left: 0px;
         border-radius: 0px;
       }
@@ -256,7 +263,7 @@ a {
     display: flex;
   }
   .close-left-sidebar-button {
-    border-bottom: 1px solid $main-color;
+    border-bottom: 1px solid $border-color-01;
   }
 
   #left-sidebar-active:checked ~ .primary-menu {
@@ -269,7 +276,7 @@ a {
     top: 0;
     left: 0;
     z-index: 9;
-    background: rgba(0, 0, 0, 0.25);
+    background: rgba(0, 0, 0, 0.35);
   }
 
   .secondary-menu {
