Changed back weights of menu icons + changed links to fonts

--- a/css/main.scss
+++ b/css/main.scss
@@ -38,25 +38,25 @@ img {
 @font-face {
   font-family: "open-sans-medium";
   font-style: italic;
-  src: url(../../font/OpenSans-Medium.ttf) format("truetype");
+  src: url("../../font/OpenSans-Medium.ttf") format("truetype");
 }
 @font-face {
   font-family: "open-sans-medium-italic";
   font-style: italic;
-  src: url(../../font/OpenSans-MediumItalic.ttf) format("truetype");
+  src: url("../../font/OpenSans-MediumItalic.ttf") format("truetype");
 }
 @font-face {
   font-family: "open-sans-bold";
   font-style: normal;
-  src: url(../../font/OpenSans-Bold.ttf) format("truetype");
+  src: url("../../font/OpenSans-Bold.ttf") format("truetype");
 }
 @font-face {
   font-family: "open-sans-bold-italic";
   font-style: italic;
-  src: url(../../font/OpenSans-BoldItalic.ttf) format("truetype");
+  src: url("../../font/OpenSans-BoldItalic.ttf") format("truetype");
 }
 @font-face {
   font-family: "open-sans-condensed-extrabold-italic";
   font-style: italic;
-  src: url(../../font/OpenSans-Condensed-ExtraBoldItalic.ttf) format("truetype");
+  src: url("../../font/OpenSans-Condensed-ExtraBoldItalic.ttf") format("truetype");
 }
